# Stomat

./: .gitattributes  .gitignore  BRIEF.md  CLAUDE.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
deploy/: .env.example  Dockerfile  docker-compose.prod.yml  entrypoint.sh
deploy/initdb/: 01-app-role.sh  02-replication-hba.sh
docker/: init.sql
docs/: DEMO.md  DEPLOY.md  OPERATIONS.md  PILOT_HARDENING.md  PRIVACY.md  UZBEK_REVIEW.md  UZ_LLM_PROMPT.md  UZ_STRINGS.md
migrations/: env.py
spike_nlu/: README.md  eval.py  finetune.py  harvest_login.py  harvest_sources.json  harvest_telegram.py  requirements.txt
tests/: conftest.py  test_about_clinic.py  test_admin_console.py  test_appointments_repo.py  test_availability_question.py  test_buffer.py  test_button_infra.py  test_calendar_auth.py  test_calendar_rules.py  test_calendar_sync_loop.py  test_call_admin_button.py  test_check_migrations.py  test_clinic_repo.py  test_concurrency.py  test_dialog_backstop.py  test_dialog_booking.py  test_dialog_closed.py  test_dialog_contact.py  test_dialog_context.py  test_dialog_dates.py  test_dialog_escalation.py  test_dialog_interrupt.py  test_dialog_medical.py  test_dialog_menu.py  test_dialog_persistence.py  test_dialog_reschedule_cancel.py  test_doctors_repo.py  test_envfile.py  test_escalation_render.py  test_export_corpus.py  test_fake_extractor.py  test_faq_layer.py  test_gcal_api.py  test_gcal_auth.py  test_gcal_conflict.py  test_gcal_export.py  test_gcal_guard.py  test_gcal_import.py  test_gcal_watch.py  test_gemini_extractor.py  (+45 more)
(+129 files in other folders)
