[project]
name = "navbat"
version = "0.1.0"
description = "Navbat - AI-administrator core (scheduling engine)"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "tzdata>=2024.1",  # zoneinfo на Windows не имеет системной базы таймзон
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
