[project]
name = "navbat"
version = "0.1.0"
description = "Navbat - AI-administrator core (scheduling engine)"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "tzdata>=2024.1",  # zoneinfo на Windows не имеет системной базы таймзон
    "pydantic>=2",     # строгая валидация JSON от LLM (schema + repair-цикл)
    "cryptography>=42",  # AES-256-GCM для PII (в stdlib AES нет)
]

[project.optional-dependencies]
dev = ["pytest>=8"]
llm = ["openai>=1.40"]  # только реальный экстрактор; тесты живут на фейковом

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
